--- a/analysis/templates/html/unused/stacked-barchart.html
+++ b/analysis/templates/html/unused/stacked-barchart.html
@@ -107,7 +107,7 @@ date,category,value\n\
             .append("g")
             .attr("transform", "translate(" + uiConfig.margin.left + "," + uiConfig.margin.top + ")");
 
-    var data = stackedData(rawData);
+    var data = newStackedData(rawData);
     var x = newXScale(uiConfig);
     var y = newYScale(uiConfig);
     var bars = newBars(svg, uiConfig, x, y);
@@ -116,8 +116,8 @@ date,category,value\n\
     var xBrush = newXBrush(svg, uiConfig, x, brushHeight);
 
     var controlsPanel = newControlsPanel(root, uiConfig);
-    groupByDropDown(controlsPanel, data, "Group by: ", ["day", "week", "month"]);
-    groupIndexDropDown(controlsPanel, data, "Change size measured in: ", ["commits", "lines", "characters"])
+    newGroupByDropDown(controlsPanel, data, "Group by: ", ["day", "week", "month"]);
+    newGroupIndexDropDown(controlsPanel, data, "Change size measured in: ", ["commits", "lines", "characters"])
 
     data.onUpdate([x.update, y.update, bars.update, xAxis.update, yAxis.update, xBrush.update]);
     x.onUpdate([bars.onXScaleUpdate, xAxis.onXScaleUpdate]);
