--- a/analysis/templates/html/amount-of-file-by-type-chart.html
+++ b/analysis/templates/html/amount-of-file-by-type-chart.html
@@ -34,8 +34,8 @@
     }
 </style>
 <body>
-<script src="../d3.v3.min.js"></script>
-<script src="../underscore-min.js"></script>
+<script src="d3.v3.min.js"></script>
+<script src="underscore-min.js"></script>
 <script src="stacked-barchart.js"></script>
 <script>
     var rawData = /*data_placeholder*/["\
