--- a/analysis/templates/html/specs/SpecRunner.html
+++ b/analysis/templates/html/specs/SpecRunner.html
@@ -7,6 +7,7 @@
     <script type="text/javascript" src="jasmine-1.3.1/jasmine-html.js"></script>
 
     <script type="text/javascript" src="../d3.v3.min.js"></script>
+    <script type="text/javascript" src="../underscore-min.js"></script>
     <script type="text/javascript" src="../code-history.js"></script>
     <script type="text/javascript" src="code-history-spec.js"></script>
     <script type="text/javascript" src="../stacked-barchart.js"></script>
