realistic categories names in test data

--- a/analysis/templates/html/change-size-by-file-type-chart.html
+++ b/analysis/templates/html/change-size-by-file-type-chart.html
@@ -49,55 +49,55 @@
 <script>
     var rawData = /*data_placeholder*/["\
 date,category,value\n\
-18/01/2013,Mee,18\n\
-19/01/2013,Mee,5\n\
-20/01/2013,Mee,3\n\
-21/01/2013,Mee,3\n\
-22/01/2013,Mee,3\n\
-18/01/2013,Ooo,18\n\
-19/01/2013,Ooo,3\n\
-21/01/2013,Ooo,11\n\
-22/01/2013,Ooo,11\n\
-20/01/2013,Ooo,11\n\
-18/01/2013,GGG,11\n\
-19/01/2013,GGG,11\n\
-20/01/2013,GGG,11\n\
-21/01/2013,GGG,11\n\
-22/01/2013,GGG,11\n\
+18/01/2013,java,18\n\
+19/01/2013,java,5\n\
+20/01/2013,java,3\n\
+21/01/2013,java,3\n\
+22/01/2013,java,3\n\
+18/01/2013,xml,18\n\
+19/01/2013,xml,3\n\
+21/01/2013,xml,11\n\
+22/01/2013,xml,11\n\
+20/01/2013,xml,11\n\
+18/01/2013,txt,11\n\
+19/01/2013,txt,11\n\
+20/01/2013,txt,11\n\
+21/01/2013,txt,11\n\
+22/01/2013,txt,11\n\
 ",
 "date,category,value\n\
-18/01/2013,Mee,180\n\
-19/01/2013,Mee,50\n\
-20/01/2013,Mee,30\n\
-21/01/2013,Mee,3\n\
-22/01/2013,Mee,50\n\
-18/01/2013,Ooo,180\n\
-19/01/2013,Ooo,30\n\
-20/01/2013,Ooo,110\n\
-21/01/2013,Ooo,110\n\
-22/01/2013,Ooo,110\n\
-18/01/2013,GGG,110\n\
-19/01/2013,GGG,110\n\
-20/01/2013,GGG,110\n\
-21/01/2013,GGG,110\n\
-22/01/2013,GGG,110\n\
+18/01/2013,java,180\n\
+19/01/2013,java,50\n\
+20/01/2013,java,30\n\
+21/01/2013,java,3\n\
+22/01/2013,java,50\n\
+18/01/2013,xml,180\n\
+19/01/2013,xml,30\n\
+20/01/2013,xml,110\n\
+21/01/2013,xml,110\n\
+22/01/2013,xml,110\n\
+18/01/2013,txt,110\n\
+19/01/2013,txt,110\n\
+20/01/2013,txt,110\n\
+21/01/2013,txt,110\n\
+22/01/2013,txt,110\n\
 ",
 "date,category,value\n\
-18/01/2013,Mee,0\n\
-19/01/2013,Mee,500\n\
-20/01/2013,Mee,300\n\
-21/01/2013,Mee,300\n\
-22/01/2013,Mee,300\n\
-18/01/2013,Ooo,1008\n\
-19/01/2013,Ooo,300\n\
-21/01/2013,Ooo,1100\n\
-22/01/2013,Ooo,1100\n\
-20/01/2013,Ooo,1100\n\
-18/01/2013,GGG,1100\n\
-19/01/2013,GGG,1100\n\
-20/01/2013,GGG,1100\n\
-21/01/2013,GGG,1100\n\
-22/01/2013,GGG,1100\n\
+18/01/2013,java,0\n\
+19/01/2013,java,500\n\
+20/01/2013,java,300\n\
+21/01/2013,java,300\n\
+22/01/2013,java,300\n\
+18/01/2013,xml,1008\n\
+19/01/2013,xml,300\n\
+21/01/2013,xml,1100\n\
+22/01/2013,xml,1100\n\
+20/01/2013,xml,1100\n\
+18/01/2013,txt,1100\n\
+19/01/2013,txt,1100\n\
+20/01/2013,txt,1100\n\
+21/01/2013,txt,1100\n\
+22/01/2013,txt,1100\n\
 "
 ]/*data_placeholder*/;
     var margin = {top: 40, right: 50, bottom: 20, left: 50};
