--- a/analysis/templates/html/all-visualizations.html
+++ b/analysis/templates/html/all-visualizations.html
@@ -35,7 +35,9 @@
 
 <script src="d3.v3.min.js"></script>
 <script src="d3.layout.cloud.js"></script>
+<script src="underscore-min.js"></script>
 <script src="code-history.js"></script>
+<script src="stacked-barchart.js"></script>
 <!--script-insert-point-->
 
 </body>
