fixed text style

--- a/analysis/templates/html/amount-of-changing-files-chart.html
+++ b/analysis/templates/html/amount-of-changing-files-chart.html
@@ -8,7 +8,8 @@
         background: #f2f2f2;
     }
 
-    #chart text, #chart label {
+    #amount-of-changing-files-chart text,
+    #amount-of-changing-files-chart label {
         font: 11px sans-serif;
         font-family: 'Lucida Grande','Calibri',Helvetica,Arial,sans-serif;
     }
