--- a/analysis/templates/html/changes-size-chart2.html
+++ b/analysis/templates/html/changes-size-chart2.html
@@ -14,6 +14,12 @@
         font-family: 'Lucida Grande','Calibri',Helvetica,Arial,sans-serif;
     }
 
+    #change-size-chart .line-movingAvg {
+        fill: none;
+        stroke-width: 1.5px;
+        stroke: #b2182b;
+    }
+
     .axis path,
     .axis line {
         fill: none;
@@ -224,8 +230,9 @@ date,value\n\
     var y = newYScale(uiConfig);
     var bars = newBars(svg, uiConfig, x, y);
     var xAxis = newXAxis(svg, uiConfig, x);
-    var yAxis = newYAxis(svg, "", y);
+    var yAxis = newYAxis(svg, "Change size", y);
     var xBrush = newXBrush(svg, uiConfig, x, brushHeight);
+    var movingAverage = newMovingAverageLine(svg, uiConfig);
 
     var controlsPanel = newControlsPanel(root, uiConfig);
     var groupBy = newGroupByDropDown(controlsPanel, data, "Group by: ", ["day", "week", "month"]);
@@ -235,8 +242,76 @@ date,value\n\
     bars.onHover([newTooltip(root, svgRoot, uiConfig, {css: "tooltip"}).update, newShading().update]);
 
     data.onUpdate([x.update, y.update, bars.update, xAxis.update, yAxis.update, xBrush.update, groupBy.update,
-        autoGroup(data).update, newNothingToShowLabel(root, svgRoot, uiConfig).update]);
-    x.onUpdate([bars.onXScaleUpdate, xAxis.onXScaleUpdate]);
+        movingAverage.update, autoGroup(data).update, newNothingToShowLabel(root, svgRoot, uiConfig).update]);
+    x.onUpdate([bars.onXScaleUpdate, xAxis.onXScaleUpdate, movingAverage.onXScaleUpdate]);
+
     data.sendUpdate();
+
+
+    function newMovingAverageLine(root, uiConfig, postfixId) {
+        postfixId = (postfixId == null ? "-movingAvg" : "-" + postfixId);
+        var line = d3.svg.line()
+                .x(function(d) { return x(d.date); })
+                .y(function(d) { return y(d.mean); });
+        root.append("defs").append("clipPath").attr("id", "clip" + postfixId)
+            .append("rect").attr("width", uiConfig.width).attr("height", uiConfig.height).attr("x", 1);
+
+        var movingAverageData;
+
+        function redrawLine() {
+            root.selectAll(".line" + postfixId).remove();
+            root.append("path")
+                .datum(movingAverageData)
+                .attr("class", "line" + postfixId)
+                .attr("clip-path", "url(#clip" + postfixId + ")")
+                .attr("d", line);
+        }
+
+        var it = {};
+        it.update = function(update) {
+            movingAverageData = timedValuesMovingAverage(update.data[0], update.dataTimeInterval, function(it) { return it.y; });
+            redrawLine();
+        };
+        it.onXScaleUpdate = function() {
+            if (movingAverageData != null) {
+                redrawLine();
+            }
+        };
+        return it;
+    }
+
+    function timedValuesMovingAverage(data, timeInterval, getValue, period) {
+        if (data.length < 2) return [];
+
+        period = (period == null ? Math.round(data.length / 10) : period);
+        if (period < 2) return [];
+
+        var firstDate = data[0].x;
+        var lastDatePlusOne = timeInterval.offset(data[data.length - 1].x, 1);
+        var allDates = timeInterval.range(firstDate, lastDatePlusOne);
+        if (allDates.length < period) return [];
+
+        data = valuesForEachDate2(data, allDates, getValue);
+
+        var mean = d3.mean(allDates.slice(0, period), function(date){ return data[date]; });
+        var result = [{date: allDates[period - 1], mean: mean}];
+
+        for (var i = period; i < allDates.length; i++) {
+            var date = allDates[i];
+            var dateToExclude = allDates[i - period];
+            mean += (data[date] - data[dateToExclude]) / period;
+            result.push({date: date, mean: mean});
+        }
+
+        return result;
+    }
+
+    function valuesForEachDate2(data, datesRange, getValue) {
+        var result = {};
+        datesRange.forEach(function(date) { result[date] = 0; });
+        data.forEach(function(d) { result[d.x] = getValue(d); });
+        return result;
+    }
+
 </script>
 </body>
